# langchain-basic

./: .dockerignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/chain/: plan_chain.py
app/chains/: agent_chain.py  chat_chain.py  plan_chain.py
app/core/: callbacks.py  config.py  llm.py  logging.py
app/router/: chat_router.py  plan_router.py
app/routers/: agent_router.py  chat_router.py  plan_router.py
app/schema/: chat.py  plan.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: index.html
app/tools/: simple_tools.py
frontend/: Dockerfile  README.md  index.html  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: ChatInput.jsx  ChatWindow.jsx  Header.jsx  Message.jsx
frontend/src/hooks/: useChat.js  useLocalStorage.js
frontend/src/pages/: ChatPage.jsx
frontend/src/services/: api.js
frontend/src/styles/: globals.css
