[project]
name = "langchain-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.123.5",
    "jinja2>=3.1.6",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
]
